--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -2,3 +2,22 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 350px;
+  height: 100vh;
+  padding: 30px;
+  background-color: #fff;
+  z-index: 1;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 10px;
+  animation: slide-out 0.2s forwards;
+}
+
+@keyframes slide-out {
+  100% {
+    left: 0;
+  }
+}
